hphp/hack/test/typecheck/shape/shape_put_wrong_arg1.php
<?hh

function test(shape() $shape): shape() {
  return Shapes::put(3, 'x', 'test');
}
